wrote fizzBuzz function and started to write tests

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Load scripts-->
     <script type="text/javascript" src="scripts/fizzBuzz.js"></script>
      <!--Load Tests-->
-    <script type="text/javascript" src="specs/fizzBuzzSpec.js"></script>
+    <script type="text/javascript" src="spec/fizzBuzzSpec.js"></script>
 </head>
 
 <body>
